--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "async": "^2.5.0",
     "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
@@ -19,6 +20,7 @@
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
+    "jquery": "^3.2.1",
     "mongoose": "^4.11.9",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
